# medical-document-qa

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PROJECT_PROGRESS.md  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
backend/: main.py
backend/api/: deps.py  schemas.py
backend/api/routes/: agent.py  auth.py  chat.py  documents.py  health.py  platform.py
backend/core/: config.py  logging.py  rate_limit.py  security.py  telemetry.py
backend/db/: session.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py
backend/models/: __init__.py  entities.py
backend/services/: agent.py  chunking.py  document_pipeline.py  embeddings.py  knowledge_graph.py  ocr.py  platform.py  rag.py  storage.py  vector_store.py
backend/tests/: conftest.py  test_chunking.py  test_embeddings.py  test_health.py  test_knowledge_graph.py  test_security.py
backend/workers/: celery_app.py  tasks.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Documents.tsx  Login.tsx  Platform.tsx
infrastructure/docker/: Dockerfile.backend  Dockerfile.frontend
infrastructure/helm/medical-kb/: Chart.yaml  values.yaml
infrastructure/helm/medical-kb/templates/: _helpers.tpl  deployment.yaml
infrastructure/kubernetes/: backend-deployment.yaml
infrastructure/monitoring/: prometheus.yml
training/datasets/: build_dataset.py
training/datasets/raw/: chunks.json
training/evaluation/: benchmark.py  evaluate.py
training/finetuning/: train_qlora.py
training/inference/: vllm_serve.py
